--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   },
   "packageManager": "npm@10.0.0",
   "dependencies": {
+    "@fontsource/inter": "^5.2.8",
+    "@fontsource/noto-sans-bengali": "^5.2.11",
     "html2canvas": "^1.4.1",
     "katex": "^0.16.27",
     "react": "^18.2.0",
